--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,4 +1,6 @@
-<form action="/todos" method="post">
-  <input type="text" placeholder="請輸入代辦事項" name="name">
-  <button type="submit">Create</button>
+<form action="/todos" method="post" style="display: inline;">
+  <div class="input-group">
+    <input class="form-control" type="text" placeholder="請輸入待辦事項" name="name">
+    <button class="btn btn-success" type="submit">Create</button>
+  </div>
 </form>
